# True-Research

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE (1).md  CLAUDE (2).md  CONTRIBUTING.md  EVIDENCE.md  LICENSE  README.md  config.yaml  driver.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deploy/: litellm-config.yaml
docs/: COMMUNITY_LENS.md  COMPREHENSIVE_RESEARCH_SPEC.md  DECISIONS.md  LOCAL_SETUP_HANDOFF.md  LOCAL_SETUP_REPORT.md  PIPELINE_WORKER_SPEC.md  RUNBOOK.md  SDK_NOTES.md  WEEKEND_HANDOFF.md
docs/archive/: LOCAL_SETUP_HANDOFF.md  LOCAL_SETUP_REPORT.md
docs/examples/: aspirin-scientific-7.8.md  config.local-hybrid.yaml  ev-battery-general-8.0.md  geo-comprehensive-verified.md
evals/: judge.py  questions.yaml  run_evals.py
experiments/gate_ab/: README.md  questions.yaml  run_gate_ab.py
scripts/: check_local_backend.py  smoke_test.ps1
src/: cli.py  errors.py  launcher.py  ledger.py  runspace.py  settings.py  state.py
src/lenses/: __init__.py  community.py
src/profiles/: __init__.py  base.py  general.py  (+3 more)
tests/: anthropic_mock.py  conftest.py  test_batch_a.py  test_blocked_retire.py  test_cli.py  test_context_bounds.py  test_driver.py  test_gate_ab_scoring.py  test_launcher.py  test_lenses.py  test_parallel.py  test_phase3.py  test_phase5.py  test_pipeline.py  test_profiles.py  test_question_tree.py  test_read_cache.py  test_real_sessions.py  test_runspace.py  test_sessions.py  test_state.py  test_untrusted.py  test_verification.py  test_waves.py  test_webui.py  test_webui_distill.py  test_webui_keys.py
(+38 files in other folders)
