[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "true-research"
version = "1.0.0"
description = "Deep research that goes deeper: multi-hour autonomous investigation, every claim traceable to a source, adversarially verified."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk==0.2.95",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "httpx>=0.27",
    "ddgs>=9.0",
    "markdown>=3.5",
    "xhtml2pdf>=0.2.16",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# tier-2 stealth fetch, result reranking, visual profile — all import-guarded
full = ["scrapling[fetchers]>=0.4.9", "rerankers[flashrank]>=0.10.0", "playwright>=1.40"]

[project.scripts]
true-research = "src.cli:main"

[tool.setuptools]
py-modules = ["driver"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"src.webui" = ["static/*", "static/vendor/*"]
